syntax = "proto3";

package cbs.admin_service;

message BulkUploadRequest {
    int32 id = 1;
}

message BulkUploadResponse {
    int32 status = 1;
    string message = 2;
}   