syntax = "proto3";

package cbs.merchant_service;


enum AuthType {
    BASIC = 0;
    OAUTH2 = 1;
    JWT = 2;
} 



message Merchant {
    string name = 1;
    AuthType auth_type = 2;


    string username = 3;
    string password = 4;
    string access_token = 5;
    string token = 6; 
}

message CreateMerchantRequest {
    string name = 1;
    AuthType auth_type = 2;
}

message CreateMerchantResponse {
    int32 status = 1;
    bool success = 2;
    string message = 3;
}


message GMerchant {
    int32 id = 1;
    string name = 2;
    AuthType auth_type = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message GetMerchantsRequest {
    int32 id = 1;
}
message GetMerchantsResponse {
    int32 status = 1;
    repeated GMerchant merchants = 2;
    string message = 3;
}


message GetMerchantRequest {
    int32 id = 1;
    int32 merchantId = 2;
}
message GetMerchantResponse {
    int32 status = 1;
    GMerchant merchant = 2;
    string message = 3;
}

message PaymentDetails {
    int32 receiver_id = 1;
    double amount = 2;
    string remark = 3;
}

message PaymentCredentials {
    string username = 1;
    string password = 2;
    string access_token = 3;
    string token = 4;
}

message CreatePaymentRequest {
    int32 merchant_id = 1;
    int32 sender_id = 2;
    AuthType auth_type = 3;
    PaymentDetails payment_details = 4;
    PaymentCredentials credentials = 5;
}

message CreatePaymentResponse {
    int32 status = 1;
    bool success = 2;
}